--- a/index.html
+++ b/index.html
@@ -169,9 +169,91 @@
                     Perspiciatis.
                 <a href="#" class="alert-link">Esto es un link</a>
                 </p>
--->
-<!--Button
 
+                cerrar una alerta
+                 <p class="alert alert-success alert-dismissable">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <strong>Felicidades</strong> operacion concluida
+                </p>
+-->
+<!--BUTTON
+            - btn
+            - btn-primary
+            - btn-secondary
+            - btn-success
+            - btn-info
+            - btn-warning
+            - btn-danger
+            - btn-dark
+            - btn-linht
+            - btn-link
+            - btn-outline-primary funciona para cambiar solo el contorno y cuando se pase el mouse sobre el botn
+            - btn-outline-secondary
+            - btn-outline-success
+            - btn-outline-info
+            - btn-outline-warning
+            - btn-outline-danger
+            - btn-outline-dark
+            - btn-outline-light
+            - btn-outline-link
+            - btn-lg
+            - btn-sm
+            - btn-block ocupa todo el ancho de la pantalla
+            - active 
+            - disabled
+-->
+<!--GRUPO DE BOTONES
+        - btn-group
+        - btn-group-lg 
+        - btn-group-sm 
+        - btn-group-xs 
+        - btn-group-vertical 
+        - dropdown-menu
+        - dropdown-item  
+        EJEMPLO DE DROPDOWN
+              <div class="btn-group ">
+                    <button type="button" class="btn btn-danger ">Apple</button>
+                    <button type="button" class="btn btn-danger ">Samsung</button>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" >Sony</button>
+                        <div class="dropdown-menu">
+                            <a href="#" class="dropdown-item" >tablet</a>
+                            <a href="#" class="dropdown-item" >smartphone</a>
+                            <a href="#" class="dropdown-item" >computadora</a>
+                        </div>
+                    </div>
+
+
+                </div>
+-->
+<!--INSIGNIAS
+                - badge
+                - badge-primary
+                - badge-secondary
+                - badge-success
+                - badge-danger
+                - badge-warning
+                - badge-info
+                - badge-light
+                - badge-dark
+                - badge-pill  
+                - inside <button type="button" class="btn btn-primary" >Mensajes <span class="badge badge-light">5</span></button>
+-->
+<!--Barra de progreso
+            - progress  
+            - striped
+            - progress-bar-striped
+            - progress-bar-animated
+
+-->
+<!--PAGINACION
+        - pagination
+        - active
+        - disabled
+        - sizing
+        - pagination-lg
+        - pagination-sm
+        - breadcrumbs
 -->
 
 <body>
@@ -179,8 +261,21 @@
     <div class="container">
         <div class="row h-100">
             <div class="col-12">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                <strong>Felicidades</strong> la operacion concluyo satisfactoriamente
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Beatae ipsum deserunt ratione autem laboriosam temporibus unde, blanditiis alias
+                    voluptatem, doloremque facilis ut cum corrupti quae itaque eveniet libero incidunt.
+                    Perspiciatis.</p>
+
+                <div class="progress " style="height: 50px;">
+                    <div class="progress-bar w-75 progress-bar-striped progress-bar-animated bg-warning ">75%</div>
+                    <div class="progress-bar w-50 progress-bar-striped progress-bar-animated bg-primary">30%</div>
+                    <div class="progress-bar w-25 progress-bar-striped progress-bar-animated bg-success">20%</div>
+                </div>
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Beatae ipsum deserunt ratione autem laboriosam temporibus unde, blanditiis alias
+                    voluptatem, doloremque facilis ut cum corrupti quae itaque eveniet libero incidunt.
+                    Perspiciatis.</p>
 
             </div>
         </div>
