--- a/Agregar.html
+++ b/Agregar.html
@@ -24,8 +24,8 @@
                     <div class="collapse navbar-collapse" id="barra">
                         <ul class="navbar-nav mx-auto ">
 
-                            <li class="nav-item"><a href="Principal.html" class="nav-link ">Vender</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link">Productos</a></li>
+                            <li class="nav-item"><a href="vender.html" class="nav-link ">Vender</a></li>
+                            <li class="nav-item"><a href="Principal.html" class="nav-link">Productos</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">Ventas</a></li>
 
                         </ul>
@@ -86,7 +86,7 @@
                 }
                 var codigo = document.getElementById('codigo').value;
                 if(codigo>0 == false){
-                    alert('La clave del producto tiene letras');
+                    alert('Verifica el codigo de barras :)');
                     return;
                 }
 
